// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBreadcrumbs.js should have breadcrumbs classes 1`] = `

<ul class="v-breadcrumbs theme--light">
</ul>

`;

exports[`VBreadcrumbs.js should render items without slot 1`] = `

<ul class="v-breadcrumbs theme--light">
  <li>
    <a class="v-breadcrumbs__item">
      a
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      b
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      c
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      d
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should show deprecation notice when using justify-end and justify-start 1`] = `

<ul class="v-breadcrumbs justify-center justify-end theme--light">
  <div>
  </div>
</ul>

`;

exports[`VBreadcrumbs.js should use a custom divider slot 1`] = `

<ul class="v-breadcrumbs theme--light">
  <li>
    <a class="v-breadcrumbs__item">
      a
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /divider/
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      b
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /divider/
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      c
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /divider/
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      d
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should use slot to render items if present 1`] = `

<ul class="v-breadcrumbs theme--light">
  <li>
    <a class="v-breadcrumbs__item">
      A
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      B
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      C
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
      D
    </a>
  </li>
</ul>

`;
